fix: refactor gRPC verification for Abseil logging and simplicity
- Add Abseil as a dependency for the gRPC verification module
- Update gRPC linking to include Abseil logging utilities
- Simplify certificate subject printing in the gRPC example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,8 +72,14 @@ target_compile_options(${project_name} PRIVATE ${params})
 # Optional: gRPC verification module
 if(${project_name_upper}_HAS_VERIFY)
     find_package(gRPC CONFIG REQUIRED)
+    find_package(absl CONFIG REQUIRED)
     target_compile_definitions(${project_name} PUBLIC LOCKEY_HAS_VERIFY)
-    target_link_libraries(${project_name} PUBLIC grpc grpc++)
+    target_link_libraries(${project_name} PUBLIC 
+        gRPC::gpr 
+        gRPC::grpc 
+        gRPC::grpc++
+        absl::log_internal_check_op
+    )
     message(STATUS "Lockey: gRPC support enabled")
 else()
     message(STATUS "Lockey: Verify module disabled (use -D${project_name_upper}_HAS_VERIFY=ON to enable)")
