--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,36 @@
 cmake_minimum_required(VERSION 3.15)
 
 # ==================================================================================================
-# Project configuration
+# Parse PROJECT file
 # ==================================================================================================
-set(PROJECT_NAME keylock)
-set(PROJECT_VERSION "0.0.14")
+file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/PROJECT" _project_lines)
+set(_line_idx 0)
+set(_section "")
+set(LIB_DEPS)
+set(EXAMPLE_DEPS)
+set(TEST_DEPS)
 
-# Dependencies formats:
-#   Git:    set(LIB_DEPS "name|https://github.com/org/repo.git|tag" ...)
-#   Find:   set(LIB_DEPS "name" ...)  # Uses find_package
-#   Pkg:    set(LIB_DEPS "pkg::name" ...)  # Uses pkg-config
-set(LIB_DEPS
-    "echo|https://github.com/bresilla/echo.git|0.0.23"
-    "datapod|https://github.com/robolibs/datapod.git|0.0.34"
-)
-set(EXAMPLE_DEPS
-    "pkg::rerun_sdk"
-)
-set(TEST_DEPS
-    "doctest|https://github.com/doctest/doctest.git|v2.4.12"
-)
+foreach(_line IN LISTS _project_lines)
+    string(STRIP "${_line}" _line)
+    if("${_line}" STREQUAL "" OR "${_line}" MATCHES "^#")
+        continue()
+    elseif("${_line}" MATCHES "^\\[(.+)\\]$")
+        set(_section "${CMAKE_MATCH_1}")
+    elseif(_line_idx LESS 2)
+        if(_line_idx EQUAL 0)
+            set(PROJECT_NAME "${_line}")
+        else()
+            set(PROJECT_VERSION "${_line}")
+        endif()
+        math(EXPR _line_idx "${_line_idx} + 1")
+    elseif("${_section}" STREQUAL "lib")
+        list(APPEND LIB_DEPS "${_line}")
+    elseif("${_section}" STREQUAL "example")
+        list(APPEND EXAMPLE_DEPS "${_line}")
+    elseif("${_section}" STREQUAL "test")
+        list(APPEND TEST_DEPS "${_line}")
+    endif()
+endforeach()
 
 # ==================================================================================================
 # Compiler selection (must be before project())
@@ -33,7 +44,6 @@ if(COMPILER STREQUAL "clang")
     if(CLANG_C_COMPILER AND CLANG_CXX_COMPILER)
         set(CMAKE_C_COMPILER ${CLANG_C_COMPILER})
         set(CMAKE_CXX_COMPILER ${CLANG_CXX_COMPILER})
-        message(STATUS "Using Clang compiler: ${CLANG_CXX_COMPILER}")
     else()
         message(FATAL_ERROR "Clang compiler not found")
     endif()
@@ -43,7 +53,6 @@ elseif(COMPILER STREQUAL "gcc")
     if(GCC_C_COMPILER AND GCC_CXX_COMPILER)
         set(CMAKE_C_COMPILER ${GCC_C_COMPILER})
         set(CMAKE_CXX_COMPILER ${GCC_CXX_COMPILER})
-        message(STATUS "Using GCC compiler: ${GCC_CXX_COMPILER}")
     else()
         message(FATAL_ERROR "GCC compiler not found")
     endif()
@@ -89,12 +98,10 @@ if(${PROJECT_NAME_UPPER}_ENABLE_SIMD)
     endif()
 else()
     # Define macro to disable SIMD in the code
-    add_compile_definitions(FARMTRAX_SIMD_DISABLED)
-    message(STATUS "SIMD optimizations disabled")
+    add_compile_definitions(${PROJECT_NAME_UPPER}_SIMD_DISABLED)
 endif()
 option(${PROJECT_NAME_UPPER}_BUILD_EXAMPLES "Build examples" OFF)
 option(${PROJECT_NAME_UPPER}_ENABLE_TESTS "Enable tests" OFF)
-option(${PROJECT_NAME_UPPER}_BIG_TRANSFER "Enable 100MB+ transfer tests (slow)" OFF)
 option(SHORT_NAMESPACE "Enable short namespace alias" ON)
 option(EXPOSE_ALL "Expose all submodule functions in namespace" OFF)
 
@@ -103,6 +110,13 @@ include(FetchContent)
 # ==================================================================================================
 # Helper function: process dependencies
 # ==================================================================================================
+string(ASCII 27 Esc)
+set(Green "${Esc}[32m")
+set(Blue "${Esc}[34m")
+set(Red "${Esc}[31m")
+set(Yellow "${Esc}[33m")
+set(Reset "${Esc}[0m")
+
 function(process_deps dep_list out_targets)
     set(targets)
     foreach(dep IN LISTS ${dep_list})
@@ -118,21 +132,28 @@ function(process_deps dep_list out_targets)
             list(GET dep_parts 1 dep_url)
             list(GET dep_parts 2 dep_tag)
 
-            FetchContent_Declare(${dep_name}
-                GIT_REPOSITORY "${dep_url}"
-                GIT_TAG "${dep_tag}"
-            )
-            FetchContent_MakeAvailable(${dep_name})
+            # Check if already fetched (by a transitive dependency)
+            FetchContent_GetProperties(${dep_name})
+            if(NOT ${dep_name}_POPULATED)
+                FetchContent_Declare(${dep_name}
+                    GIT_REPOSITORY "${dep_url}"
+                    GIT_TAG "${dep_tag}"
+                )
+                FetchContent_MakeAvailable(${dep_name})
+                message(STATUS "${Green}${dep_name}${Reset} version ${dep_tag} added by ${Blue}${PROJECT_NAME}")
+            endif()
             list(APPEND targets ${dep_name})
         elseif(is_pkg EQUAL 0)
             # pkg-config dependency: pkg::name
             string(SUBSTRING "${dep}" 5 -1 pkg_name)
             find_package(PkgConfig REQUIRED)
             pkg_check_modules(${pkg_name} REQUIRED IMPORTED_TARGET ${pkg_name})
+            message(STATUS "${Green}${pkg_name}${Reset} added by ${Blue}${PROJECT_NAME}")
             list(APPEND targets PkgConfig::${pkg_name})
         else()
             # Simple dependency - use find_package
             find_package(${dep} REQUIRED)
+            message(STATUS "${Green}${dep}${Reset} added by ${Blue}${PROJECT_NAME}")
             list(APPEND targets ${dep}::${dep})
         endif()
     endforeach()
@@ -225,8 +246,7 @@ if(${PROJECT_NAME_UPPER}_ENABLE_TESTS)
     foreach(src_file IN LISTS test_sources)
         get_filename_component(test_name "${src_file}" NAME_WE)
         add_executable(${test_name} "${src_file}")
-        target_compile_definitions(${test_name} PRIVATE SHORT_NAMESPACE DOCTEST_CONFIG_IMPLEMENT_WITH_MAIN PROJECT_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
-            $<$<BOOL:${${PROJECT_NAME_UPPER}_BIG_TRANSFER}>:BIG_TRANSFER>)
+        target_compile_definitions(${test_name} PRIVATE SHORT_NAMESPACE DOCTEST_CONFIG_IMPLEMENT_WITH_MAIN PROJECT_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
         target_link_libraries(${test_name} ${PROJECT_NAME}::${PROJECT_NAME} ${ALL_TEST_DEPS})
         add_test(NAME ${test_name} COMMAND ${test_name})
     endforeach()
